tests/baselines/reference/classPropertyIsPublicByDefault.errors.txt
classPropertyIsPublicByDefault.ts(14,1): error TS2454: Variable 'c' is used before being assigned.
classPropertyIsPublicByDefault.ts(15,1): error TS2454: Variable 'c' is used before being assigned.
classPropertyIsPublicByDefault.ts(16,1): error TS2454: Variable 'c' is used before being assigned.
classPropertyIsPublicByDefault.ts(16,1): error TS2322: Type '1' is not assignable to type 'null'.
classPropertyIsPublicByDefault.ts(17,1): error TS2454: Variable 'c' is used before being assigned.
classPropertyIsPublicByDefault.ts(20,1): error TS2721: Cannot invoke an object which is possibly 'null'.
classPropertyIsPublicByDefault.ts(21,1): error TS2322: Type '1' is not assignable to type 'null'.


==== classPropertyIsPublicByDefault.ts (7 errors) ====
    class C {
        x: string;
        get y() { return null; }
        set y(x) { }
        foo() { }
    
        static a: string;
        static get b() { return null; }
        static set b(x) { }
        static foo() { }
    }
    
    var c: C;
    c.x;
    ~
!!! error TS2454: Variable 'c' is used before being assigned.
    c.y;
    ~
!!! error TS2454: Variable 'c' is used before being assigned.
    c.y = 1;
    ~
!!! error TS2454: Variable 'c' is used before being assigned.
    ~~~
!!! error TS2322: Type '1' is not assignable to type 'null'.
    c.foo();
    ~
!!! error TS2454: Variable 'c' is used before being assigned.
    
    C.a;
    C.b();
    ~~~
!!! error TS2721: Cannot invoke an object which is possibly 'null'.
    C.b = 1;
    ~~~
!!! error TS2322: Type '1' is not assignable to type 'null'.
    C.foo();